moved import to in-memory only version;; fixed some bugs for it